fix overflow on landing page

--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 /* setting up media queries: https://it.noknow.info/en/article/css/set-up-media-queries-for-various-device-widths */
 
+/* *{
+  outline: solid 1px red;
+} */
+
 html {
   scroll-behavior: smooth;
   font-size: 19px;
-  min-height: 100%;
+  min-height: 100%; 
 }
 
 @media screen and (max-width: 1600px){
@@ -65,6 +69,7 @@ html {
 
 .nav-island-parent{
   display: flex;
+  flex-wrap: wrap;
 }
 .nav-island-parent a{
   display: inline-block;
